# libneoradio2

./: .gitignore  .gitmodules  .readthedocs.yaml  99-intrepidcs.rules  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  MANIFEST.in  README.md  build.rs  command_handler.h  commandhandlerbank.h  config.h  device.cpp  device.h  devicecommandhandler.h  fifo.c  fifo.h  generate_swig_bindings.sh  hiddevice.cpp  hiddevice.h  index.html  libneoradio2.cpp  libneoradio2.def  libneoradio2.h  libneoradio2.pc.in  libneoradio2.sln  libneoradio2.vcxproj  libneoradio2.vcxproj.filters  libneoradio2common.h  neoRADIO2_frames.h  neoradio2.h  neoradio2device.cpp  neoradio2device.h  neoradio2framehandler.h  pyproject.toml  radio2_frame.h  radio2_frames.h  setup.py  (+4 more)
.github/workflows/: docs.yml  rust.yml  wheels.yml
C++/: ReadMe.txt  config.h  device.cpp  device.h  hiddevice.cpp  libneoradio2.sln  libneoradio2.vcxproj.filters  neoradio2device.cpp  neoradio2device.h  neoradio2framehandler.h  stdafx.cpp
RAD-IO2 Arduino Example/: README.md
RAD-IO2 Arduino Example/Pictures/: IMG_3603.HEIC  IMG_3604.HEIC  IMG_3605.HEIC  IMG_3607.HEIC  IMG_3608.HEIC  IMG_3609.HEIC  IMG_3610.HEIC  IMG_3611.HEIC  IMG_3612.HEIC  IMG_3613.HEIC
RAD-IO2 Arduino Example/neoRADIO2/neoRADIO2_Interface/: fifo.c  fifo.h  neoRAD-IO2-AIN.h  neoRAD-IO2-AOUT.h  neoRAD-IO2-PWRRLY.h  neoRAD-IO2-TC.h  neoRAD-IO2.c  neoRAD-IO2.h  neoRAD-IO2_PacketHandler.h  (+4 more)
doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_n.html  globals_p.html  globals_s.html  globals_type.html  globals_vars.html  index.html  libneoradio2_8cpp.html  libneoradio2_8h.html  libneoradio2_8h_source.html  libneoradio2common_8h.html  libneoradio2common_8h_source.html  menudata.js  radio2__frames_8h.html  radio2__frames_8h_source.html  struct___neoradio2_device_info-members.html  struct___neoradio2_device_info.html  struct__neo_r_a_d_i_o2___settings_part-members.html  struct__neo_r_a_d_i_o2___settings_part.html  struct__neo_r_a_d_i_o2__device_settings-members.html  struct__neo_r_a_d_i_o2__device_settings.html  struct__neo_r_a_d_i_o2__settings-members.html  struct__neo_r_a_d_i_o2__settings.html  struct__neo_r_a_d_i_o2frame-members.html  struct__neo_r_a_d_i_o2frame.html  struct__neo_r_a_d_i_o2frame__cal_header-members.html  struct__neo_r_a_d_i_o2frame__cal_header.html  struct__neo_r_a_d_i_o2frame__header-members.html  struct__neo_r_a_d_i_o2frame__header.html  (+12 more)
doc/latex/: annotated.tex  files.tex  libneoradio2_8cpp.tex  libneoradio2_8h.tex  libneoradio2common_8h.tex  radio2__frames_8h.tex  refman.tex  struct___neoradio2_device_info.tex  struct__neo_r_a_d_i_o2___settings_part.tex  struct__neo_r_a_d_i_o2__device_settings.tex  struct__neo_r_a_d_i_o2__settings.tex  struct__neo_r_a_d_i_o2frame.tex  struct__neo_r_a_d_i_o2frame__cal_header.tex  struct__neo_r_a_d_i_o2frame__header.tex  struct__neo_r_a_d_i_o2frame__identify.tex  struct__neo_r_a_d_i_o2frame__identify_response.tex  struct__neo_r_a_d_i_o2settings___c_a_n.tex  struct__neo_r_a_d_i_o2settings___channel_name.tex  union__bytes_to_float.tex  union__neo_r_a_d_i_o2_a_o_u_t__channel_config.tex
example/: CMakeLists.txt  basic.c
example/badge/: CMakeLists.txt  badge.c
example/basic/: CMakeLists.txt
examples/: find_and_read.rs
libneoradio2/: CMakeLists.txt  README.md
libneoradio2/example/badge/: CMakeLists.txt  badge.c
libneoradio2/example/basic/: CMakeLists.txt
libneoradio2/include/: device.h  devicecommandhandler.h  fifo.h  hiddevice.h  libneoradio2.h  libneoradio2common.h  neoradio2device.h
libneoradio2/src/: device.cpp  hiddevice.cpp  libneoradio2.cpp  neoradio2device.cpp
libneoradio2/test/: test.vcxproj  test.vcxproj.filters
python/: .gitignore  CMakeLists.txt  README.md  build_2.7.bat  build_3.4.bat  build_all.bat  live_graph.py  no_setup.py  pyproject.toml  requirements.txt  setup.py  test.py  version.py
python/docs/: classes.rst  conf.py  examples.rst  functions.rst  generate_function_rst.py  index.rst  installation.rst  make.bat  neoradio2.rst  requirements.txt
python/docs/html/: .buildinfo  classes.html  examples.html  functions.html  genindex.html  index.html  installation.html  objects.inv  productline.html  search.html  searchindex.js
python/docs/html/_modules/: index.html
python/docs/html/_sources/: classes.rst.txt  examples.rst.txt  functions.rst.txt  index.rst.txt  installation.rst.txt  productline.rst.txt
python/example/: DigitalOutput.py  LEDs.py  ReadAINValues.py  live_graph.py  matplotlib_example.py  nonblocking_example.py  random_chain.py  test.py
python/example/badge/: badge_all_example.py  badge_analog_input_example.py  badge_digital_output_example.py  badge_leds_example.py
python/msvc/: python_neoradio2.sln  python_neoradio2.vcxproj  python_neoradio2.vcxproj.filters
python/src/: main.cpp
python/tests/: test.py
rust/doc/: crates.js  help.html  index.html  settings.html  src-files.js
src/: calibration.rs  device.rs  error.rs  ffi.rs  lib.rs  settings.rs  types.rs
swig/: CMakeLists.txt  generate_swig_bindings.sh  swig.i
swig/csharp/: CommandStateType.cs  CommandStatus.cs  Neoradio2DeviceInfo.cs  SWIGTYPE_p_uint8_t.cs  StatusType.cs  neoradio2.cs  neoradio2PINVOKE.cs
swig/d/: neoradio2.d  neoradio2_im.d
swig/go/: neoradio2.go
swig/java/: CMakeCache.txt  CMakeLists.txt  CommandStateType.java  CommandStatus.java  Makefile  Neoradio2DeviceInfo.java  SWIGTYPE_p_uint8_t.java  StatusType.java  cmake_install.cmake  example.java  libneoradio2.so.1  libneoradio2.so.1.0.0  neoradio2.java  neoradio2Constants.java  neoradio2JNI.java
swig/java/java/: CommandStateType.java  CommandStatus.java  Neoradio2DeviceInfo.java  SWIGTYPE_p_uint8_t.java  StatusType.java  neoradio2.java  neoradio2Constants.java  neoradio2JNI.java  swig_wrap.cxx
swig/perl5/: neoradio2.pm
swig/php7/: neoradio2.php  php_neoradio2.h
swig/r/: neoradio2.R
test/: main.cpp  test.sln  test.vcxproj
tests/: api.rs  hardware.rs  link.rs
(+161 files in other folders)
