[project]
name = "neoradio2"
version = "1.3.1"
authors = [
  {name = "David Rebbe", email = "drebbe@intrepidcs.com"},
]
maintainers = [
  {name = "David Rebbe", email = "drebbe@intrepidcs.com"},
]
description = "neoRADIO2 python bindings"
keywords = ["intrepidcs", "Automotive", "ICS"]
readme = {file = "python/README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers=[ 
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]

[project.urls]
Homepage = "https://intrepidcs.com"
Repository = "https://github.com/intrepidcs/libneoradio2/"
Issues = "https://github.com/intrepidcs/libneoradio2/issues"

# [build-system]
# requires = [
#     "setuptools>=61.0.0", 
#     "wheel",
#     "pybind11",
# ]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.dynamic]
# version = {attr = "version.__version__"}

[build-system]
requires = ["scikit-build-core", "pybind11", "wheel"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = true
BUILD_SHARED_LIBS = true

[tool.cibuildwheel]
build = "{*-win32,*-win_amd64,*-macosx_universal2,*-manylinux_x86_64,*-manylinux_aarch64}"
skip = "cp36-* pp* *-manylinux_i686 *-musllinux_*"
environment = {DISTUTILS_DEBUG=1}
before-build = "python -m pip install wheel"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"

[tool.cibuildwheel.linux]
before-build = "dnf install -y libpcap-devel cmake libusbx-devel clang clang-tools-extra libudev-devel"

[tool.cibuildwheel.macos]
archs = ["universal2"]
before-build = "brew install automake libtool cmake clang-format"

[tool.cibuildwheel.windows]
before-build = "choco install llvm"
