[project]
name = "neoradio2"
version = "1.4.0"
authors = [
  {name = "David Rebbe", email = "drebbe@intrepidcs.com"},
]
maintainers = [
  {name = "David Rebbe", email = "drebbe@intrepidcs.com"},
]
description = "neoRADIO2 python bindings"
keywords = ["intrepidcs", "Automotive", "ICS"]
readme = {file = "python/README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
# Python 3.8 is EOL and no longer shipped in the manylinux_2_28 image, so cp38
# wheels can't be built there.
requires-python = ">=3.9"
classifiers=[ 
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]

[project.urls]
Homepage = "https://intrepidcs.com"
Repository = "https://github.com/intrepidcs/libneoradio2/"
Issues = "https://github.com/intrepidcs/libneoradio2/issues"

# [build-system]
# requires = [
#     "setuptools>=61.0.0", 
#     "wheel",
#     "pybind11",
# ]
# build-backend = "setuptools.build_meta"

# [tool.setuptools.dynamic]
# version = {attr = "version.__version__"}

[build-system]
requires = ["scikit-build-core", "pybind11", "wheel"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"

# The HID backend and frame-description headers live in git submodules whose
# contents are not tracked by this repo, so they must be explicitly bundled or
# an sdist install fails at add_subdirectory(.../hidapi).
[tool.scikit-build.sdist]
include = [
    "libneoradio2/hidapi/**",
    "libneoradio2/neoRAD-IO2-FrameDescription/**",
]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = true

[tool.cibuildwheel]
# aarch64 is intentionally omitted: it needs QEMU/native-runner setup that CI
# does not currently provide, so listing it only produced silent no-ops.
build = "{*-win32,*-win_amd64,*-macosx_universal2,*-manylinux_x86_64}"
# Skip PyPy, i686/musl, and the experimental free-threaded (cp3XXt) builds.
skip = "cp36-* pp* *-manylinux_i686 *-musllinux_* cp3*t-*"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
# Smoke-test every built wheel so a broken import never ships green.
test-command = "python -c \"import neoradio2; print(neoradio2.__version__)\""

[tool.cibuildwheel.linux]
before-build = "dnf install -y libpcap-devel cmake libusbx-devel clang clang-tools-extra libudev-devel"

[tool.cibuildwheel.macos]
archs = ["universal2"]
before-build = "brew install cmake"

# Windows builds with MSVC (already present on the runner); no extra toolchain.
